--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <img src="Muslim_Couple.png" alt="Love">
+        <img src="just_kidding.png" alt="Love">
     <h2 class="question">Will you marry me?</h2>
     <div class="btn-group">
         <button class="yes-btn">Yes</button>
